spacing issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,9 +26,7 @@ button {
 body {
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     overflow: scroll;
-    max-width: 100vw;
-    max-height: 100vh;
-}
+    min-height: fit-content;
 
 li {
     list-style-type: none;
@@ -54,7 +52,7 @@ grid-template-columns: minmax(1fr, auto-fit) 4fr;
 grid-template-rows: .5fr 3fr .5fr;
 background-color: #e2e8f0;
 padding-left: 0;
-max-height: 100vh;
+min-height: fit-content;
 }
     .sidebar {
         padding: 10px;
@@ -155,6 +153,7 @@ padding-left: 40px;
                 justify-content: flex-start;
                 font-size: smaller;
                 font-weight: bolder;
+                padding-right: 20px;
             }
 
             .header-bottom-left img {
@@ -180,6 +179,7 @@ padding-left: 40px;
         grid-area: 2 / 2 / 4 / 3;
         background-color: #e2e8f0;
         display: grid;
+        min-height: fit-content;
         grid-template-columns: 6fr 3fr;
         grid-template-rows: .4fr 7fr .4fr 5fr 1fr;
     } 
@@ -196,9 +196,10 @@ padding-left: 40px;
     }
         .projects {
            display: grid;
-           grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
-           grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+           grid-template-rows: repeat(auto-fill, 1fr);
+           grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
            grid-area: 2 / 1 / 5 / 2;
+           min-height: fit-content;
         }
             .card { 
 margin: 10px;
@@ -209,6 +210,9 @@ border-radius: 20px;
 box-shadow: 1px 1px 3px -3px rgb(155, 155, 155);
 padding: 40px;
 border-left: 8px solid #facc15;
+border-top-left-radius: 9px;
+border-bottom-left-radius: 9px;
+max-height:400px;
             }
                 .card-top {
                     color: rgb(95, 95, 95);
